--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 <body>
     <div class="content">
-        <h2>傻宝宝，我们已经热恋了</h2>
+        <h2>婷婷和兴兴在一起已经</h2>
         <div class="timer">
             <b id="d"></b> 天 <b id="h"></b> 时 <b id="m"></b> 分 <b id="s"></b> 秒
         </div>
@@ -52,7 +52,7 @@
 
     <script>
         function timer() {
-            var start = new Date(2015, 6, 1); // 2015.7.2
+            var start = new Date(2025, 12, 2); // 2015.7.2
             var t = new Date() - start;
             var h = ~~(t / 1000 / 60 / 60 % 24);
             if (h < 10) {
